--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" sizes="16x16" href="/favicon-16x16.svg" />
+    <meta name="description" content="ContextAI - Intelligent Document Assistant powered by RAG technology" />
+    <meta name="theme-color" content="#667eea" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <title>ContextAI - Intelligent Document Assistant</title>
   </head>
   <body>
     <div id="root"></div>
